--- a/package.json
+++ b/package.json
@@ -1,29 +1,58 @@
 {
-  "name": "mono-starter",
+  "name": "mono-fluent-starter",
   "description": "mono repo starter projects",
   "private": true,
-  "workspaces": [
-    "packages/*",
-    "apps/*"
-  ],
   "scripts": {
     "docs": "doctoc --title '**Table of content**' README.md",
-    "clean": "pnpm run -r clean",
-    "build": "pnpm run -r build",
-    "test": "pnpm run -r test",
-    "lint": "eslint --ext js,ts,tsx .",
     "format": "prettier . --write",
-    "prepare": "husky install && husky set .husky/pre-commit 'npx lint-staged' && git add .husky/pre-commit"
+    "prepare": "husky install",
+    "build": "turbo build",
+    "changeset": "changeset",
+    "clean": "turbo clean",
+    "dev": "turbo dev --no-cache  --concurrency 16 --continue",
+    "lint": "turbo lint",
+    "prettier-check": "prettier --check \"**/*.{js,ts,tsx,md,mdx}\"",
+    "type-check": "turbo type-check",
+    "prettier-fix": "prettier --write \"**/*.{js,ts,tsx,md,mdx}\"",
+    "publint": "turbo publint",
+    "test": "turbo test",
+    "clean:all": "turbo clean && pnpm -r exec rm -rf node_modules",
+    "ci:release": "turbo clean && turbo build && changeset publish",
+    "ci:version": "changeset version && node .github/scripts/cleanup-examples-changesets.mjs && pnpm install --no-frozen-lockfile",
+    "clean-examples": "node .github/scripts/cleanup-examples-changesets.mjs && pnpm install --no-frozen-lockfile"
+  },
+  "lint-staged": {
+    "*": [
+      "prettier --ignore-unknown --write"
+    ]
   },
   "devDependencies": {
     "doctoc": "~2.2.1",
     "eslint": "~9.10.0",
     "eslint-plugin-import": "~2.30.0",
-    "typescript": "~5.6.2"
-  },
-  "dependencies": {
-    "format": "^0.2.2",
+    "typescript": "~5.6.2",
+    "@changesets/cli": "^2.27.8",
+    "@playwright/test": "^1.47.0",
+    "chalk": "^5.3.0",
+    "eslint-config-fluent": "workspace:*",
     "husky": "^9.1.5",
-    "lint-staged": "^15.2.10"
-  }
+    "lint-staged": "^15.2.10",
+    "next": "15.0.0-canary.23",
+    "playwright": "^1.47.0",
+    "prettier": "3.3.3",
+    "publint": "0.2.10",
+    "react": "19.0.0-rc-cc1ec60d0d-20240607",
+    "react-dom": "19.0.0-rc-cc1ec60d0d-20240607",
+    "turbo": "^2.1.1",
+    "vitest": "2.0.5"
+  },
+  "prettier": {
+    "tabWidth": 2,
+    "useTabs": false,
+    "singleQuote": true,
+    "arrowParens": "avoid",
+    "trailingComma": "all"
+  },
+  "packageManager": "pnpm@9.10.0"
+
 }
